Add registry section; change styles

--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -24,10 +24,11 @@
       <ul class="menu-list">
         <li class="menu-list-item "><a href="/" class="menu-list-link ">Home</a>
         <li class="menu-list-item active"><a href="/menu1/" class="menu-list-link active">News</a>
+        <li class="menu-list-item "><a href="/menu2/" class="menu-list-link ">Registry</a>
       </ul>
     </div>
     <div class="footer">
-      Mimi: a package that provides a component model for integrated assessment models
+      Mimi: providing a component model for integrated assessment models
     </div>
   </div>
   <!-- CONTENT -->
@@ -51,8 +52,9 @@
 <p>The Mimi developement team recently participated in the 2019 Association of Environmental and Resource Economists &#40;AERE&#41; summer conference during the pre-conference workshop on Advances in Integrated Assessment Models. This included both a presentation and a hands-on session demonstrating various use cases for Mimi. The Github repository <a href="https://github.com/davidanthoff/teaching-2019-aere-workshop">here</a> contains a&#41; all slides from the workshop and b&#41; all the code from the hands on sessions, which may be of interest to Mimi users. Importantly note that the linked code represents as a snapshot of Mimi at the time of the workshop, and <strong>will not</strong> be updated to reflect new changes.</p>
 <div class="page-foot">
   <div class="copyright">
-    Authored by David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: August 26, 2020. 
+    <hr color:grey>
+    <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
+    <br>Last modified: August 26, 2020 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
