--- a/__site/index.html
+++ b/__site/index.html
@@ -24,10 +24,11 @@
       <ul class="menu-list">
         <li class="menu-list-item active"><a href="/" class="menu-list-link active">Home</a>
         <li class="menu-list-item "><a href="/menu1/" class="menu-list-link ">News</a>
+        <li class="menu-list-item "><a href="/menu2/" class="menu-list-link ">Registry</a>
       </ul>
     </div>
     <div class="footer">
-      Mimi: a package that provides a component model for integrated assessment models
+      Mimi: providing a component model for integrated assessment models
     </div>
   </div>
   <!-- CONTENT -->
@@ -41,10 +42,12 @@
 
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="mimi_an_integrated_assessment_modeling_framework"><a href="#mimi_an_integrated_assessment_modeling_framework">Mimi: An Integrated Assessment Modeling Framework</a></h1>
-<p><div class="franklin-toc"><ol><li><a href="#models_using_mimi">Models using Mimi</a></li><li><a href="#mimi_registry">Mimi Registry</a></li><li><a href="#contributing">Contributing</a></li><li><a href="#acknowledgements">Acknowledgements</a></li></ol></div> </p>
+<p><div class="franklin-toc"><ol><li><a href="#introduction">Introduction </a></li><li><a href="#models_using_mimi">Models using Mimi</a></li><li><a href="#contributing">Contributing</a></li><li><a href="#acknowledgements">Acknowledgements</a></li></ol></div> </p>
+<h2 id="introduction"><a href="#introduction">Introduction </a></h2>
 <p>Mimi is a <a href="http://julialang.org">Julia</a> package for <a href="https://en.wikipedia.org/wiki/Integrated_assessment_modelling">integrated assessment models</a> developed in connection with Resources for the Future&#39;s <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a>. </p>
 <p>The source code for this package is located on Github <a href="https://github.com/mimiframework/Mimi.jl">here</a>, and for detailed information on the installation and use of this package, as well as several tutorials, please see the <a href="https://www.mimiframework.org/Mimi.jl/stable/">Documentation</a>. For specific requests for new functionality, or bug reports, please add an <a href="https://github.com/mimiframework/Mimi.jl/issues">Issue</a> to the repository.</p>
 <p>Support for users is primarily hosted on the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>, where we also post PSA topics with recent software updates and important information for users. Please get in touch with <a href="http://www.david-anthoff.com">David Anthoff</a> if you have further questions about using this framework or want to be involved in any way with this effort.</p>
+<p><strong>To get started with Mimi, head to the documentation <a href="&#40;https://www.mimiframework.org/Mimi.jl/stable/&#41;">here</a>&#33;</strong></p>
 <h2 id="models_using_mimi"><a href="#models_using_mimi">Models using Mimi</a></h2>
 <p>Several models already use the Mimi framework, including those linked below.</p>
 <ul>
@@ -81,29 +84,15 @@
 <li><p><a href="https://github.com/Environment-Research/AIR">RICE&#43;AIR</a></p>
 </li>
 </ul>
-<h2 id="mimi_registry"><a href="#mimi_registry">Mimi Registry</a></h2>
-<p>For convenience, several models are registered in the <a href="https://github.com/mimiframework/Mimi.jl">MimiRegistry</a>, and operate as packages with the Julia package manager <a href="https://docs.julialang.org/en/v1/stdlib/Pkg/index.html">Pkg</a>. For details on connecting to this central Mimi registry, see the Mimi <a href="https://www.mimiframework.org/Mimi.jl/stable/">Documentation</a>.</p>
-<p>The models currently included in the registry include those linked below.</p>
-<ul>
-<li><p><a href="https://github.com/fund-model/MimiFUND.jl">MimiFUND.jl</a></p>
-</li>
-<li><p><a href="https://github.com/anthofflab/MimiDICE2010.jl">MimiDICE2010.jl</a></p>
-</li>
-<li><p><a href="https://github.com/anthofflab/MimiDICE2013.jl">MimiDICE2013.jl</a></p>
-</li>
-<li><p><a href="https://github.com/anthofflab/MimiRICE2010.jl">MimiRICE2010.jl</a></p>
-</li>
-<li><p><a href="https://github.com/anthofflab/MimiPAGE2009.jl">MimiPAGE2009.jl</a></p>
-</li>
-</ul>
 <h2 id="contributing"><a href="#contributing">Contributing</a></h2>
 <p>Contributions to Mimi are most welcome&#33; You can interact with the Mimi development team via issues and pull requests on Github, and in the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>.</p>
 <h2 id="acknowledgements"><a href="#acknowledgements">Acknowledgements</a></h2>
 <p>This work is supported by the <a href="https://sloan.org/">Alfred P. Sloan Foundation</a> through Resources for the Future&#39;s <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a> and by the National Science Foundation through the Network for Sustainable Climate Risk Management &#40;<a href="http://scrimhub.org/">SCRiM</a>&#41; under NSF cooperative agreement GEO-1240507.</p>
 <div class="page-foot">
   <div class="copyright">
-    Authored by David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: August 26, 2020. 
+    <hr color:grey>
+    <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
+    <br>Last modified: August 26, 2020 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
