Add examples and graphics

--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -24,7 +24,8 @@
       <ul class="menu-list">
         <li class="menu-list-item "><a href="/" class="menu-list-link ">Home</a>
         <li class="menu-list-item active"><a href="/menu1/" class="menu-list-link active">News</a>
-        <li class="menu-list-item "><a href="/menu2/" class="menu-list-link ">Registry</a>
+        <li class="menu-list-item "><a href="/menu2/" class="menu-list-link ">Model Registry</a>
+        <li class="menu-list-item "><a href="/menu3/" class="menu-list-link ">Examples</a>      
       </ul>
     </div>
     <div class="footer">
