Fix broken link to documentation

--- a/__site/index.html
+++ b/__site/index.html
@@ -48,7 +48,7 @@
 <p>Mimi is a <a href="http://julialang.org">Julia</a> package for <a href="https://en.wikipedia.org/wiki/Integrated_assessment_modelling">integrated assessment models</a> developed in connection with Resources for the Future&#39;s <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a>. </p>
 <p>The source code for this package is located on Github <a href="https://github.com/mimiframework/Mimi.jl">here</a>, and for detailed information on the installation and use of this package, as well as several tutorials, please see the <a href="https://www.mimiframework.org/Mimi.jl/stable/">Documentation</a>. For specific requests for new functionality, or bug reports, please add an <a href="https://github.com/mimiframework/Mimi.jl/issues">Issue</a> to the repository.</p>
 <p>Support for users is primarily hosted on the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>, where we also post PSA topics with recent software updates and important information for users. Please get in touch with <a href="http://www.david-anthoff.com">David Anthoff</a> if you have further questions about using this framework or want to be involved in any way with this effort.</p>
-<p><strong>To get started with Mimi, head to the documentation <a href="&#40;https://www.mimiframework.org/Mimi.jl/stable/&#41;">here</a>&#33;</strong></p>
+<p><strong>To get started with Mimi, head to the documentation <a href="https://www.mimiframework.org/Mimi.jl/stable/">here</a>&#33;</strong></p>
 <h2 id="models_using_mimi"><a href="#models_using_mimi">Models using Mimi</a></h2>
 <p>Several models already use the Mimi framework, including those linked below.</p>
 <ul>
@@ -93,7 +93,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: August 27, 2020 
+    <br>Last modified: September 10, 2020 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
