--- a/__site/index.html
+++ b/__site/index.html
@@ -62,21 +62,21 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiRICE2010.jl">MimiRICE2010.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">Mimi-SNEASY.jl</a> &#40;currently in closed beta&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">Mimi-SNEASY.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">Mimi-FAIR.jl</a> &#40;currently in closed beta&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">Mimi-FAIR.jl</a></p>
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiPAGE2009.jl/">MimiPAGE2009.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">Mimi-MAGICC.jl</a> &#40;CH4 parts currently in closed beta&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">Mimi-MAGICC.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">Mimi-HECTOR.jl</a> &#40;CH4 parts currently in closed beta&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">Mimi-HECTOR.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">Mimi-CIAM.jl</a> &#40;currently in closed beta&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">Mimi-CIAM.jl</a> &#40;currently in closed BETA&#41;</p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-brick.jl">Mimi-BRICK.jl</a> &#40;currently in closed beta&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-brick.jl">Mimi-BRICK.jl</a> &#40;currently in closed BETA&#41;</p>
 </li>
-<li><p><a href="https://github.com/fdennig/mimi_NICE">mimi_NICE</a> &#40;currently in closed beta&#41;</p>
+<li><p><a href="https://github.com/fdennig/mimi_NICE">mimi_NICE</a></p>
 </li>
 <li><p><a href="http://awashmodel.org/">AWASH</a></p>
 </li>
@@ -93,7 +93,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: September 10, 2020 
+    <br>Last modified: December 24, 2020 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
