--- a/__site/index.html
+++ b/__site/index.html
@@ -50,7 +50,7 @@
 <p>Support for users is primarily hosted on the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>, where we also post PSA topics with recent software updates and important information for users. Please get in touch with <a href="http://www.david-anthoff.com">David Anthoff</a> if you have further questions about using this framework or want to be involved in any way with this effort.</p>
 <p><strong>To get started with Mimi, head to the documentation <a href="https://www.mimiframework.org/Mimi.jl/stable/">here</a>&#33;</strong></p>
 <h2 id="models_using_mimi"><a href="#models_using_mimi">Models using Mimi</a></h2>
-<p>Several models already use the Mimi framework, including those linked below.</p>
+<p>Several models already use the Mimi framework, including those linked below. A majority of these models are part of the Mimi registry as detailed in the Mimi Registry subsection of this website. Note also that even models not registerd in the Mimi registry may be constructed to operate as packages. These practices are explained further in the documentation section &quot;Explanations: Models as Packages&quot;.</p>
 <ul>
 <li><p><a href="https://github.com/fund-model/MimiFUND.jl">MimiFUND.jl</a></p>
 </li>
@@ -84,6 +84,10 @@
 </li>
 <li><p><a href="https://github.com/Environment-Research/AIR">RICE&#43;AIR</a></p>
 </li>
+<li><p><a href="https://github.com/ckingdon95/MooreAg.jl">Moore-Ag.jl</a></p>
+</li>
+<li><p><a href="https://github.com/rffscghg/MimiIWG.jl">MimiIWG.jl</a></p>
+</li>
 </ul>
 <h2 id="contributing"><a href="#contributing">Contributing</a></h2>
 <p>Contributions to Mimi are most welcome&#33; You can interact with the Mimi development team via issues and pull requests on Github, and in the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>.</p>
@@ -93,7 +97,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: December 24, 2020 
+    <br>Last modified: February 10, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
