--- a/__site/index.html
+++ b/__site/index.html
@@ -48,7 +48,8 @@
 <p>Mimi is a <a href="http://julialang.org">Julia</a> package for <a href="https://en.wikipedia.org/wiki/Integrated_assessment_modelling">integrated assessment models</a> developed in connection with Resources for the Future&#39;s <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a>. </p>
 <p>The source code for this package is located on Github <a href="https://github.com/mimiframework/Mimi.jl">here</a>, and for detailed information on the installation and use of this package, as well as several tutorials, please see the <a href="https://www.mimiframework.org/Mimi.jl/stable/">Documentation</a>. For specific requests for new functionality, or bug reports, please add an <a href="https://github.com/mimiframework/Mimi.jl/issues">Issue</a> to the repository.</p>
 <p>Support for users is primarily hosted on the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>, where we also post PSA topics with recent software updates and important information for users. Please get in touch with <a href="http://www.david-anthoff.com">David Anthoff</a> if you have further questions about using this framework or want to be involved in any way with this effort.</p>
-<p><strong>To get started with Mimi, head to the documentation <a href="https://www.mimiframework.org/Mimi.jl/stable/">here</a>&#33;</strong></p>
+<p><strong>To get started with Mimi, head to the documentation <a href="https://www.mimiframework.org/Mimi.jl/stable/">here</a>&#33;</strong>  </p>
+<p><em>For the most up-to-date documentation that matches with the master branch of Mimi as opposed to the most recent tag, more advanced users may go <a href="https://www.mimiframework.org/Mimi.jl/dev/">here</a> &#40;or simply navigate to the &quot;dev&quot; option in the Version dropdown menu in the bottom-left hand corner of the documentation website&#41;, but unless required for your work using this branch and docs is <strong>not recommended</strong> as we cannot gaurantee stability of this branch at any given time.</em></p>
 <h2 id="models_using_mimi"><a href="#models_using_mimi">Models using Mimi</a></h2>
 <p>Several models already use the Mimi framework, including those linked below. A majority of these models are part of the Mimi registry as detailed in the Mimi Registry subsection of this website. Note also that even models not registerd in the Mimi registry may be constructed to operate as packages. These practices are explained further in the documentation section &quot;Explanations: Models as Packages&quot;.</p>
 <ul>
@@ -97,7 +98,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: February 10, 2021 
+    <br>Last modified: February 11, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
