Add a fourth menu for docs

--- a/__site/index.html
+++ b/__site/index.html
@@ -42,15 +42,15 @@
 
 
 <!-- Content appended here (in class franklin-content) -->
-<div class="franklin-content"><h1 id="mimi"><a href="#mimi">Mimi </a></h1>
+<div class="franklin-content"><h1 id="mimi"><a href="#mimi" class="header-anchor">Mimi </a></h1>
 <p><div class="franklin-toc"><ol><li><a href="#mimi_an_integrated_assessment_modeling_framework">Mimi: An Integrated Assessment Modeling Framework</a></li><li><a href="#models_using_mimi">Models using Mimi</a></li><li><a href="#contributing">Contributing</a></li><li><a href="#acknowledgements">Acknowledgements</a></li></ol></div> </p>
-<h2 id="mimi_an_integrated_assessment_modeling_framework"><a href="#mimi_an_integrated_assessment_modeling_framework">Mimi: An Integrated Assessment Modeling Framework</a></h2>
+<h2 id="mimi_an_integrated_assessment_modeling_framework"><a href="#mimi_an_integrated_assessment_modeling_framework" class="header-anchor">Mimi: An Integrated Assessment Modeling Framework</a></h2>
 <p>Mimi is a <a href="http://julialang.org">Julia</a> package for <a href="https://en.wikipedia.org/wiki/Integrated_assessment_modelling">integrated assessment models</a> developed in connection with Resources for the Future&#39;s <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a>. </p>
 <p>The source code for this package is located on Github <a href="https://github.com/mimiframework/Mimi.jl">here</a>, and for detailed information on the installation and use of this package, as well as several tutorials, please see the <a href="https://www.mimiframework.org/Mimi.jl/stable/">Documentation</a>. For specific requests for new functionality, or bug reports, please add an <a href="https://github.com/mimiframework/Mimi.jl/issues">Issue</a> to the repository.</p>
 <p>Support for users is primarily hosted on the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>, where we also post PSA topics with recent software updates and important information for users. Please get in touch with <a href="http://www.david-anthoff.com">David Anthoff</a> if you have further questions about using this framework or want to be involved in any way with this effort.</p>
 <p><strong>To get started with Mimi, head to the documentation <a href="https://www.mimiframework.org/Mimi.jl/stable/">here</a>&#33;</strong>  </p>
 <p><em>For the most up-to-date documentation that matches with the master branch of Mimi as opposed to the most recent tag, more advanced users may go <a href="https://www.mimiframework.org/Mimi.jl/dev/">here</a> &#40;or simply navigate to the &quot;dev&quot; option in the Version dropdown menu in the bottom-left hand corner of the documentation website&#41;, but unless required for your work using this branch and docs is <strong>not recommended</strong> as we cannot gaurantee stability of this branch at any given time.</em></p>
-<h2 id="models_using_mimi"><a href="#models_using_mimi">Models using Mimi</a></h2>
+<h2 id="models_using_mimi"><a href="#models_using_mimi" class="header-anchor">Models using Mimi</a></h2>
 <p>Several models already use the Mimi framework, including those linked below. A majority of these models are part of the Mimi registry as detailed in the Mimi Registry subsection of this website. Note also that even models not registerd in the Mimi registry may be constructed to operate as packages. These practices are explained further in the documentation section &quot;Explanations: Models as Packages&quot;.</p>
 <ul>
 <li><p><a href="https://github.com/fund-model/MimiFUND.jl">MimiFUND.jl</a></p>
@@ -90,9 +90,9 @@
 <li><p><a href="https://github.com/rffscghg/MimiIWG.jl">MimiIWG.jl</a></p>
 </li>
 </ul>
-<h2 id="contributing"><a href="#contributing">Contributing</a></h2>
+<h2 id="contributing"><a href="#contributing" class="header-anchor">Contributing</a></h2>
 <p>Contributions to Mimi are most welcome&#33; You can interact with the Mimi development team via issues and pull requests on Github, and in the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>.</p>
-<h2 id="acknowledgements"><a href="#acknowledgements">Acknowledgements</a></h2>
+<h2 id="acknowledgements"><a href="#acknowledgements" class="header-anchor">Acknowledgements</a></h2>
 <p>This work is supported by the <a href="https://sloan.org/">Alfred P. Sloan Foundation</a> through Resources for the Future&#39;s <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a> and by the National Science Foundation through the Network for Sustainable Climate Risk Management &#40;<a href="http://scrimhub.org/">SCRiM</a>&#41; under NSF cooperative agreement GEO-1240507.</p>
 <div class="page-foot">
   <div class="copyright">
