--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -42,9 +42,9 @@
 
 
 <!-- Content appended here (in class franklin-content) -->
-<div class="franklin-content"><h1 id="news"><a href="#news">News</a></h1>
+<div class="franklin-content"><h1 id="news"><a href="#news" class="header-anchor">News</a></h1>
 <div class="franklin-toc"><ol><li><a href="#2102021">2/10/2021</a></li><li><a href="#8012019">8/01/2019</a></li><li><a href="#7252020">7/25/2020</a></li></ol></div>
-<h2 id="2102021"><a href="#2102021">2/10/2021</a></h2>
+<h2 id="2102021"><a href="#2102021" class="header-anchor">2/10/2021</a></h2>
 <p>On February 10, 2021, Resources for the Future &#40;RFF&#41; held a <a href="https://www.rff.org/events/rff-live/the-social-cost-of-carbon-key-scientific-and-policy-considerations-for-the-biden-administration/">live webinar</a> for over 1,000 participants described on rff.org as follows:</p>
 <p>&quot;Over the past four years, the <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a> at Resources for the Future &#40;RFF&#41; has been a key hub for SCC scholarship to implement the NAS recommendations. On February 10, 2021, RFF held a live webinar that highlighted the latest SCC-related research from RFF scholars and the <a href="http://www.impactlab.org">Climate Impact Lab</a>. The conversation also featured perspectives from decisionmakers using the SCC to inform policy and highlighted key considerations for the Biden administration’s near-term and final updates of the estimates.&quot;</p>
 <p>This webinar <strong>highlighted Mimi</strong> as a &quot;free, open-source computing platform allows users to access, run, and modify the social cost of carbon &#40;SCC&#41; models used by the federal Interagency Working Group to estimate the SCC&quot;, <strong>and was paired with the <a href="https://www.rff.org/publications/data-tools/social-cost-of-carbon-computing-platform-models-from-the-iwg/">Social Cost of Carbon Computing Platform: Models from the Interagency Working Group</a> post</strong> including an <a href="https://www.youtube.com/watch?v&#61;C2rqpHk3Rek&amp;feature&#61;emb_logo">embedded video</a> by Professor Anthoff.</p>
@@ -52,9 +52,9 @@
 <p><a href="https://www.rff.org/events/rff-live/the-social-cost-of-carbon-key-scientific-and-policy-considerations-for-the-biden-administration/">RFF SCC Webinar</a></p>
 <p><a href="https://www.rff.org/publications/data-tools/social-cost-of-carbon-computing-platform-models-from-the-iwg/">RFF Mimi Post &#40;with link to Mimi Demo &#41;</a></p>
 <p><a href="https://www.youtube.com/watch?v&#61;C2rqpHk3Rek&amp;feature&#61;emb_logo">Direct YouTube Link to Mimi Demo</a></p>
-<h2 id="8012019"><a href="#8012019">8/01/2019</a></h2>
+<h2 id="8012019"><a href="#8012019" class="header-anchor">8/01/2019</a></h2>
 <p>The Mimi developement team recently participated in the 2019 Association of Environmental and Resource Economists &#40;AERE&#41; summer conference during the pre-conference workshop on Advances in Integrated Assessment Models. This included both a presentation and a hands-on session demonstrating various use cases for Mimi. The Github repository <a href="https://github.com/davidanthoff/teaching-2019-aere-workshop">here</a> contains a&#41; all slides from the workshop and b&#41; all the code from the hands on sessions, which may be of interest to Mimi users. Importantly note that the linked code represents as a snapshot of Mimi at the time of the workshop, and <strong>will not</strong> be updated to reflect new changes.</p>
-<h2 id="7252020"><a href="#7252020">7/25/2020</a></h2>
+<h2 id="7252020"><a href="#7252020" class="header-anchor">7/25/2020</a></h2>
 <p>Hello Mimi users&#33; </p>
 <p>Today we officially tagged and released Mimi v1.0.0, which has some new features, documentation, and quite a bit of internals work as well.  Since this is a major version change, there are some breaking changes that may require you to update your code.  We have done the updates for the existing models in the Mimi registry &#40;FUND, DICE, etc.&#41;, and will release new major versions of those today as well, so if you are using the latest version of Mimi and the latest version of the packages, all should run smoothly.</p>
 <p><strong>Please view the how to guide here: https://www.mimiframework.org/Mimi.jl/stable/howto/howto_6/ for a run-down of how you should update your own code.</strong></p>
