Add menu4 to subfolders

--- a/__site/index.html
+++ b/__site/index.html
@@ -26,6 +26,7 @@
         <li class="menu-list-item "><a href="/menu1/" class="menu-list-link ">News</a>
         <li class="menu-list-item "><a href="/menu2/" class="menu-list-link ">Model Registry</a>
         <li class="menu-list-item "><a href="/menu3/" class="menu-list-link ">Examples</a>      
+        <li class="menu-list-item "><a href="/menu4/" class="menu-list-link ">Documentation</a>      
       </ul>
     </div>
     <div class="footer">
