--- a/__site/index.html
+++ b/__site/index.html
@@ -70,6 +70,8 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiPAGE2009.jl/">MimiPAGE2009.jl</a></p>
 </li>
+<li><p><a href="https://github.com/openmodels/MimiPAGE2020.jl">MimiPAGE2020.jl</a></p>
+</li>
 <li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">Mimi-MAGICC.jl</a></p>
 </li>
 <li><p><a href="https://github.com/anthofflab/mimi-hector.jl">Mimi-HECTOR.jl</a></p>
@@ -99,7 +101,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: February 11, 2021 
+    <br>Last modified: April 27, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
