--- a/__site/index.html
+++ b/__site/index.html
@@ -60,7 +60,7 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiDICE2013.jl">MimiDICE2013.jl</a></p>
 </li>
-<li><p><a href="https://github.com/AlexandrePavlov/MimiDICE2016.jl">MimiDICE2016.jl</a></p>
+<li><p><a href="https://github.com/AlexandrePavlov/MimiDICE2016.jl">MimiDICE2016.jl</a> &#40;version R not R2&#41;</p>
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiRICE2010.jl">MimiRICE2010.jl</a></p>
 </li>
