--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -44,7 +44,9 @@
 
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="news"><a href="#news" class="header-anchor">News</a></h1>
-<div class="franklin-toc"><ol><li><a href="#2102021">2/10/2021</a></li><li><a href="#8012019">8/01/2019</a></li><li><a href="#7252020">7/25/2020</a></li></ol></div>
+<div class="franklin-toc"><ol><li><a href="#532021">5/3/2021</a></li><li><a href="#2102021">2/10/2021</a></li><li><a href="#8012019">8/01/2019</a></li><li><a href="#7252020">7/25/2020</a></li></ol></div>
+<h2 id="532021"><a href="#532021" class="header-anchor">5/3/2021</a></h2>
+<p>We have written up a repository and accompanying notebook <a href="https://github.com/anthofflab/MimiFUND-MimiFAIR-Flat.jl/blob/main/MimiFUND-MimiFAIR-Flat.ipynb">here</a> to demonstrate the steps to couple together two models, specifically in this case replacng &#40;most of&#41; the <a href="https://github.com/fund-model/MimiFUND.jl">FUND model</a>&#39;s climate module with the <a href="https://github.com/anthofflab/MimiFAIR.jl">FAIR model</a>.</p>
 <h2 id="2102021"><a href="#2102021" class="header-anchor">2/10/2021</a></h2>
 <p>On February 10, 2021, Resources for the Future &#40;RFF&#41; held a <a href="https://www.rff.org/events/rff-live/the-social-cost-of-carbon-key-scientific-and-policy-considerations-for-the-biden-administration/">live webinar</a> for over 1,000 participants described on rff.org as follows:</p>
 <p>&quot;Over the past four years, the <a href="https://www.rff.org/topics/scc/">Social Cost of Carbon Initiative</a> at Resources for the Future &#40;RFF&#41; has been a key hub for SCC scholarship to implement the NAS recommendations. On February 10, 2021, RFF held a live webinar that highlighted the latest SCC-related research from RFF scholars and the <a href="http://www.impactlab.org">Climate Impact Lab</a>. The conversation also featured perspectives from decisionmakers using the SCC to inform policy and highlighted key considerations for the Biden administration’s near-term and final updates of the estimates.&quot;</p>
@@ -64,7 +66,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: February 13, 2021 
+    <br>Last modified: May 04, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
