Add fifth menu for publications

--- a/__site/index.html
+++ b/__site/index.html
@@ -27,6 +27,7 @@
         <li class="menu-list-item "><a href="/menu2/" class="menu-list-link ">Model Registry</a>
         <li class="menu-list-item "><a href="/menu3/" class="menu-list-link ">Examples</a>      
         <li class="menu-list-item "><a href="/menu4/" class="menu-list-link ">Documentation</a>      
+        <li class="menu-list-item "><a href="/menu5/" class="menu-list-link ">Publications</a>      
       </ul>
     </div>
     <div class="footer">
