--- a/__site/menu4/index.html
+++ b/__site/menu4/index.html
@@ -27,6 +27,7 @@
         <li class="menu-list-item "><a href="/menu2/" class="menu-list-link ">Model Registry</a>
         <li class="menu-list-item "><a href="/menu3/" class="menu-list-link ">Examples</a>      
         <li class="menu-list-item active"><a href="/menu4/" class="menu-list-link active">Documentation</a>      
+        <li class="menu-list-item "><a href="/menu5/" class="menu-list-link ">Publications</a>      
       </ul>
     </div>
     <div class="footer">
@@ -50,7 +51,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: March 18, 2021 
+    <br>Last modified: June 15, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
