Add Rising citations

--- a/__site/menu5/index.html
+++ b/__site/menu5/index.html
@@ -49,6 +49,8 @@
 <p>Errickson, F., Kuruc, K., &amp; McFadden, J. &#40;2021&#41;. Animal-based foods have high social and climate costs. Nature Food, 2&#40;4&#41;, 274-281. doi:10.1038/s43016-021-00265-1</p>
 <p>Scovronick, N., Anthoff, D., Dennig, F., Errickson, F., Ferranna, M., Peng, W., ... &amp; Budolfson, M. &#40;2021&#41;. The importance of health co-benefits under different climate policy cooperation frameworks. Environmental Research Letters, 16&#40;5&#41;, 055027.</p>
 <p>Errickson, F. C., Keller, K., Collins, W. D., Srikrishnan, V., &amp; Anthoff, D. &#40;2021&#41;. Equity is more important for the social cost of methane than climate uncertainty. Nature, 592&#40;7855&#41;, 564-570. doi:10.1038/s41586-021-03386-6</p>
+<p>Rising, J., &amp; Devineni, N. &#40;2020&#41;. Crop switching reduces agricultural losses from climate change in the United States by half under RCP 8.5. Nature communications, 11&#40;1&#41;, 1-7.</p>
+<p>Rising, J. &#40;2020&#41;. Decision-making and integrated assessment models of the water-energy-food nexus. Water Security, 9, 100056.</p>
 <p>Anthoff, D., &amp; Emmerling, J. &#40;2019&#41;. Inequality and the social cost of carbon. Journal of the Association of Environmental and Resource Economists, 6&#40;2&#41;, 243-273. doi:10.1086/701900</p>
 <p>Scovronick, N., Budolfson, M., Dennig, F., Errickson, F., Fleurbaey, M., Peng, W., ... &amp; Wagner, F. &#40;2019&#41;. The impact of human health co-benefits on evaluations of global climate policy. Nature communications, 10&#40;1&#41;, 1-12. doi:10.1038/s41467-019-09499-x</p>
 <p>Moore, F. C., Rising, J., Lollo, N., Springer, C., Vasquez, V., Dolginow, A., ... &amp; Anthoff, D. &#40;2018&#41;. Mimi-PAGE, an open-source implementation of the PAGE09 integrated assessment model. Scientific data, 5&#40;1&#41;, 1-8. doi:10.1038/sdata.2018.187</p>
@@ -57,7 +59,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: June 15, 2021 
+    <br>Last modified: June 17, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
