Update model names in links

--- a/__site/index.html
+++ b/__site/index.html
@@ -67,19 +67,19 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiRICE2010.jl">MimiRICE2010.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">Mimi-SNEASY.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">MimiSNEASY.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">Mimi-FAIR.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">MimiFAIR.jl</a></p>
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiPAGE2009.jl/">MimiPAGE2009.jl</a></p>
 </li>
 <li><p><a href="https://github.com/openmodels/MimiPAGE2020.jl">MimiPAGE2020.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">Mimi-MAGICC.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">MimiMAGICC.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">Mimi-HECTOR.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">MimiHECTOR.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">Mimi-CIAM.jl</a> &#40;currently in closed BETA&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">MimiCIAM.jl</a> &#40;currently in closed BETA&#41;</p>
 </li>
 <li><p><a href="https://github.com/anthofflab/mimi-brick.jl">Mimi-BRICK.jl</a> &#40;currently in closed BETA&#41;</p>
 </li>
@@ -91,7 +91,7 @@
 </li>
 <li><p><a href="https://github.com/Environment-Research/AIR">RICE&#43;AIR</a></p>
 </li>
-<li><p><a href="https://github.com/ckingdon95/MooreAg.jl">Moore-Ag.jl</a></p>
+<li><p><a href="https://github.com/ckingdon95/MooreAg.jl">MooreAg.jl</a></p>
 </li>
 <li><p><a href="https://github.com/rffscghg/MimiIWG.jl">MimiIWG.jl</a></p>
 </li>
@@ -104,7 +104,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: April 27, 2021 
+    <br>Last modified: June 30, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
