--- a/__site/menu2/index.html
+++ b/__site/menu2/index.html
@@ -59,15 +59,15 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiPAGE2009.jl">MimiPAGE2009.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">Mimi-MAGICC.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">MimiMAGICC.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">Mimi-HECTOR.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">MimiHECTOR.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">Mimi-SNEASY.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">MimiSNEASY.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">Mimi-FAIR.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">MimiFAIR.jl</a></p>
 </li>
-<li><p><a href="https://github.com/ckingdon95/MooreAg.jl">Moore-Ag.jl</a></p>
+<li><p><a href="https://github.com/ckingdon95/MooreAg.jl">MooreAg.jl</a></p>
 </li>
 <li><p><a href="https://github.com/rffscghg/MimiIWG.jl">MimiIWG.jl</a></p>
 </li>
@@ -76,7 +76,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: May 04, 2021 
+    <br>Last modified: June 30, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
