--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -45,7 +45,16 @@
 
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="news"><a href="#news" class="header-anchor">News</a></h1>
-<div class="franklin-toc"><ol><li><a href="#532021">5/3/2021</a></li><li><a href="#2102021">2/10/2021</a></li><li><a href="#8012019">8/01/2019</a></li><li><a href="#7252020">7/25/2020</a></li></ol></div>
+<div class="franklin-toc"><ol><li><a href="#6152021">6/15/2021</a></li><li><a href="#532021">5/3/2021</a></li><li><a href="#2102021">2/10/2021</a></li><li><a href="#8012019">8/01/2019</a></li><li><a href="#7252020">7/25/2020</a></li></ol></div>
+<h2 id="6152021"><a href="#6152021" class="header-anchor">6/15/2021</a></h2>
+<p>We released Mimi 1.3.0, featuring new and improved handling of setting and updating parameters, mostly driven by helpful requests and comments from users. These changes  will not be breaking, so your existing models should work in most cases, and if they don&#39;t please get in touch.  That said, we encourage taking a look at modifying your models accordingly if you have a chance.</p>
+<ul>
+<li><p>See a full description here: https://www.mimiframework.org/Mimi.jl/stable/howto/howto_5/</p>
+</li>
+<li><p>... and a guide to updating your existing code here: https://www.mimiframework.org/Mimi.jl/stable/howto/howto_9/</p>
+</li>
+</ul>
+<p>Comments/Concerns are welcome&#33;</p>
 <h2 id="532021"><a href="#532021" class="header-anchor">5/3/2021</a></h2>
 <p>We have written up a repository and accompanying notebook <a href="https://github.com/anthofflab/MimiFUND-MimiFAIR-Flat.jl/blob/main/MimiFUND-MimiFAIR-Flat.ipynb">here</a> to demonstrate the steps to couple together two models, specifically in this case replacng &#40;most of&#41; the <a href="https://github.com/fund-model/MimiFUND.jl">FUND model</a>&#39;s climate module with the <a href="https://github.com/anthofflab/MimiFAIR.jl">FAIR model</a>.</p>
 <h2 id="2102021"><a href="#2102021" class="header-anchor">2/10/2021</a></h2>
@@ -67,7 +76,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: May 04, 2021 
+    <br>Last modified: July 03, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
