--- a/__site/menu5/index.html
+++ b/__site/menu5/index.html
@@ -46,6 +46,7 @@
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="publications_using_mimi"><a href="#publications_using_mimi" class="header-anchor">Publications Using Mimi</a></h1>
 <p>“Health Impacts of Climate Change as Contained in Economic Models Estimating the Social Cost of Carbon Dioxide” with Kevin Cromar, Peter Howard and Valeri Vasquez, GeoHealth, forthcoming</p>
+<p>Jarmo et al. &#40;2021&#41;. The social cost of carbon dioxide under climate-economy feedbacks and temperature variability. ERL. https://iopscience.iop.org/article/10.1088/1748-9326/ac1d0b</p>
 <p>Errickson, F., Kuruc, K., &amp; McFadden, J. &#40;2021&#41;. Animal-based foods have high social and climate costs. Nature Food, 2&#40;4&#41;, 274-281. doi:10.1038/s43016-021-00265-1</p>
 <p>Scovronick, N., Anthoff, D., Dennig, F., Errickson, F., Ferranna, M., Peng, W., ... &amp; Budolfson, M. &#40;2021&#41;. The importance of health co-benefits under different climate policy cooperation frameworks. Environmental Research Letters, 16&#40;5&#41;, 055027.</p>
 <p>Errickson, F. C., Keller, K., Collins, W. D., Srikrishnan, V., &amp; Anthoff, D. &#40;2021&#41;. Equity is more important for the social cost of methane than climate uncertainty. Nature, 592&#40;7855&#41;, 564-570. doi:10.1038/s41586-021-03386-6</p>
@@ -59,7 +60,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: June 17, 2021 
+    <br>Last modified: September 09, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
