--- a/__site/index.html
+++ b/__site/index.html
@@ -95,6 +95,8 @@
 </li>
 <li><p><a href="https://github.com/rffscghg/MimiIWG.jl">MimiIWG.jl</a></p>
 </li>
+<li><p><a href="https://github.com/anthofflab/MimiSSPs.jl">MimiSSPs.jl</a></p>
+</li>
 </ul>
 <h2 id="contributing"><a href="#contributing" class="header-anchor">Contributing</a></h2>
 <p>Contributions to Mimi are most welcome&#33; You can interact with the Mimi development team via issues and pull requests on Github, and in the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>.</p>
@@ -104,7 +106,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: June 30, 2021 
+    <br>Last modified: November 01, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
