--- a/__site/index.html
+++ b/__site/index.html
@@ -81,9 +81,9 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/mimi-hector.jl">MimiHECTOR.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">MimiCIAM.jl</a> &#40;currently in closed BETA&#41;</p>
+<li><p><a href="https://github.com/raddleverse/MimiCIAM.jl">MimiCIAM.jl</a> &#40;currently in closed BETA&#41;</p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-brick.jl">Mimi-BRICK.jl</a> &#40;currently in closed BETA&#41;</p>
+<li><p><a href="https://github.com/raddleverse/MimiBRICK.jl.git">Mimi-BRICK.jl</a> &#40;currently in closed BETA&#41;</p>
 </li>
 <li><p><a href="https://github.com/fdennig/mimi_NICE">mimi_NICE</a></p>
 </li>
@@ -110,7 +110,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: November 22, 2021 
+    <br>Last modified: December 12, 2021 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
