Update list of models

--- a/__site/index.html
+++ b/__site/index.html
@@ -67,11 +67,15 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiRICE2010.jl">MimiRICE2010.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">MimiSNEASY.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">Mimi-SNEASY.jl</a></p>
 </li>
 <li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">MimiFAIR.jl</a></p>
 </li>
 <li><p><a href="https://github.com/FrankErrickson/MimiFAIR13.jl">MimiFAIR13.jl</a></p>
+</li>
+<li><p><a href="https://github.com/FrankErrickson/MimiFAIRv1_6_2.jl">MimiFAIRv1<em>6</em>2.jl</a> &#40;currently in closed BETA&#41;</p>
+</li>
+<li><p><a href="https://github.com/FrankErrickson/MimiFAIRv2.jl">MimiFAIRv2.jl</a></p>
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiPAGE2009.jl/">MimiPAGE2009.jl</a></p>
 </li>
@@ -81,9 +85,9 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/mimi-hector.jl">MimiHECTOR.jl</a></p>
 </li>
-<li><p><a href="https://github.com/raddleverse/MimiCIAM.jl">MimiCIAM.jl</a> &#40;currently in closed BETA&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">MimiCIAM.jl</a> &#40;currently in closed BETA&#41;</p>
 </li>
-<li><p><a href="https://github.com/raddleverse/MimiBRICK.jl.git">Mimi-BRICK.jl</a> &#40;currently in closed BETA&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-brick.jl">MimiBRICK.jl</a></p>
 </li>
 <li><p><a href="https://github.com/fdennig/mimi_NICE">mimi_NICE</a></p>
 </li>
@@ -99,8 +103,6 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiSSPs.jl">MimiSSPs.jl</a></p>
 </li>
-<li><p><a href="https://github.com/bryanparthum/MimiIWG-HFC">MimiIWG-HFC.jl</a></p>
-</li>
 </ul>
 <h2 id="contributing"><a href="#contributing" class="header-anchor">Contributing</a></h2>
 <p>Contributions to Mimi are most welcome&#33; You can interact with the Mimi development team via issues and pull requests on Github, and in the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>.</p>
@@ -110,7 +112,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: December 12, 2021 
+    <br>Last modified: August 19, 2022 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
