Use Franklin serve fcn to build Bryans changes

--- a/__site/index.html
+++ b/__site/index.html
@@ -55,7 +55,9 @@
 <h2 id="models_using_mimi"><a href="#models_using_mimi" class="header-anchor">Models using Mimi</a></h2>
 <p>Several models already use the Mimi framework, including those linked below. A majority of these models are part of the Mimi registry as detailed in the Mimi Registry subsection of this website. Note also that even models not registerd in the Mimi registry may be constructed to operate as packages. These practices are explained further in the documentation section &quot;Explanations: Models as Packages&quot;.</p>
 <ul>
-<li><p><a href="https://github.com/fund-model/MimiFUND.jl">MimiFUND.jl</a></p>
+<li><p><a href="https://github.com/raddleverse/MimiBRICK.jl">MimiBRICK.jl</a></p>
+</li>
+<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">MimiCIAM.jl</a></p>
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiDICE2010.jl">MimiDICE2010.jl</a></p>
 </li>
@@ -65,43 +67,47 @@
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiDICE2016R2.jl">MimiDICE2016R2.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/MimiRICE2010.jl">MimiRICE2010.jl</a></p>
-</li>
-<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">Mimi-SNEASY.jl</a></p>
-</li>
 <li><p><a href="https://github.com/anthofflab/mimi-fair.jl/">MimiFAIR.jl</a></p>
 </li>
 <li><p><a href="https://github.com/FrankErrickson/MimiFAIR13.jl">MimiFAIR13.jl</a></p>
 </li>
-<li><p><a href="https://github.com/FrankErrickson/MimiFAIRv1_6_2.jl">MimiFAIRv1<em>6</em>2.jl</a> &#40;currently in closed BETA&#41;</p>
+<li><p><a href="https://github.com/FrankErrickson/MimiFAIRv1_6_2.jl">MimiFAIRv1&#95;6&#95;2.jl</a></p>
 </li>
 <li><p><a href="https://github.com/FrankErrickson/MimiFAIRv2.jl">MimiFAIRv2.jl</a></p>
+</li>
+<li><p><a href="https://github.com/fund-model/MimiFUND.jl">MimiFUND.jl</a></p>
+</li>
+<li><p><a href="https://github.com/rffscghg/MimiGIVE.jl">MimiGIVE.jl</a></p>
+</li>
+<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">MimiHECTOR.jl</a></p>
+</li>
+<li><p><a href="https://github.com/rffscghg/MimiIWG.jl">MimiIWG.jl</a></p>
+</li>
+<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">MimiMAGICC.jl</a></p>
+</li>
+<li><p><a href="https://github.com/rffscghg/MimiMooreEtAlAgricultureImpacts.jl">MimiMooreEtAlAgricultureImpacts.jl</a></p>
+</li>
+<li><p><a href="https://github.com/FrankErrickson/Mimi_NAS_pH.jl">Mimi<em>NAS</em>pH.jl</a></p>
+</li>
+<li><p><a href="https://github.com/fdennig/mimi_NICE">mimi_NICE</a></p>
 </li>
 <li><p><a href="https://github.com/anthofflab/MimiPAGE2009.jl/">MimiPAGE2009.jl</a></p>
 </li>
 <li><p><a href="https://github.com/openmodels/MimiPAGE2020.jl">MimiPAGE2020.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-magicc.jl">MimiMAGICC.jl</a></p>
+<li><p><a href="https://github.com/rffscghg/MimiRFFSPs.jl">MimiRFFSPs.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-hector.jl">MimiHECTOR.jl</a></p>
+<li><p><a href="https://github.com/anthofflab/MimiRICE2010.jl">MimiRICE2010.jl</a></p>
 </li>
-<li><p><a href="https://github.com/anthofflab/mimi-ciam.jl">MimiCIAM.jl</a> &#40;currently in closed BETA&#41;</p>
+<li><p><a href="https://github.com/anthofflab/mimi-sneasy.jl">Mimi-SNEASY.jl</a></p>
 </li>
-<li><p><a href="https://github.com/raddleverse/MimiBRICK.jl">MimiBRICK.jl</a></p>
-</li>
-<li><p><a href="https://github.com/fdennig/mimi_NICE">mimi_NICE</a></p>
+<li><p><a href="https://github.com/anthofflab/MimiSSPs.jl">MimiSSPs.jl</a></p>
 </li>
 <li><p><a href="http://awashmodel.org/">AWASH</a></p>
 </li>
 <li><p><a href="https://github.com/openmodels/PAGE-ICE">PAGE-ICE</a></p>
 </li>
 <li><p><a href="https://github.com/Environment-Research/AIR">RICE&#43;AIR</a></p>
-</li>
-<li><p><a href="https://github.com/ckingdon95/MooreAg.jl">MooreAg.jl</a></p>
-</li>
-<li><p><a href="https://github.com/rffscghg/MimiIWG.jl">MimiIWG.jl</a></p>
-</li>
-<li><p><a href="https://github.com/anthofflab/MimiSSPs.jl">MimiSSPs.jl</a></p>
 </li>
 </ul>
 <h2 id="contributing"><a href="#contributing" class="header-anchor">Contributing</a></h2>
@@ -112,7 +118,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: August 19, 2022 
+    <br>Last modified: October 05, 2022 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
