Fixing italics for NAS package

--- a/__site/index.html
+++ b/__site/index.html
@@ -87,7 +87,7 @@
 </li>
 <li><p><a href="https://github.com/rffscghg/MimiMooreEtAlAgricultureImpacts.jl">MimiMooreEtAlAgricultureImpacts.jl</a></p>
 </li>
-<li><p><a href="https://github.com/FrankErrickson/Mimi_NAS_pH.jl">Mimi<em>NAS</em>pH.jl</a></p>
+<li><p><a href="https://github.com/FrankErrickson/Mimi_NAS_pH.jl">Mimi&#95;NAS&#95;pH.jl</a></p>
 </li>
 <li><p><a href="https://github.com/fdennig/mimi_NICE">mimi_NICE</a></p>
 </li>
