Add workflow note

--- a/__site/index.html
+++ b/__site/index.html
@@ -52,6 +52,7 @@
 <p>Support for users is primarily hosted on the <a href="https://forum.mimiframework.org">Mimi Framework forum</a>, where we also post PSA topics with recent software updates and important information for users. Please get in touch with <a href="http://www.david-anthoff.com">David Anthoff</a> if you have further questions about using this framework or want to be involved in any way with this effort.</p>
 <p><strong>To get started with Mimi, head to the documentation <a href="https://www.mimiframework.org/Mimi.jl/stable/">here</a>&#33;</strong>  </p>
 <p><em>For the most up-to-date documentation that matches with the master branch of Mimi as opposed to the most recent tag, more advanced users may go <a href="https://www.mimiframework.org/Mimi.jl/dev/">here</a> &#40;or simply navigate to the &quot;dev&quot; option in the Version dropdown menu in the bottom-left hand corner of the documentation website&#41;, but unless required for your work using this branch and docs is <strong>not recommended</strong> as we cannot gaurantee stability of this branch at any given time.</em></p>
+<p>Finally, if at any point julia-related issues with workflows, environments, and/or package versioning become frustrating, please do not hesitate to reach out via the <a href="https://forum.mimiframework.org">forum</a>.  This can be a hurdle to learn at first, but taking a moment to get it right early will save you <strong>a lot</strong> of time down the road.  We are more than happy to help you, and are getting together some standardized resources in the meantime.</p>
 <h2 id="models_using_mimi"><a href="#models_using_mimi" class="header-anchor">Models using Mimi</a></h2>
 <p>Several models already use the Mimi framework, including those linked below. A majority of these models are part of the Mimi registry as detailed in the Mimi Registry subsection of this website. Note also that even models not registerd in the Mimi registry may be constructed to operate as packages. These practices are explained further in the documentation section &quot;Explanations: Models as Packages&quot;.</p>
 <ul>
@@ -118,7 +119,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: October 05, 2022 
+    <br>Last modified: November 15, 2022 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
