--- a/__site/menu1/index.html
+++ b/__site/menu1/index.html
@@ -45,7 +45,11 @@
 
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="news"><a href="#news" class="header-anchor">News</a></h1>
-<div class="franklin-toc"><ol><li><a href="#6152021">6/15/2021</a></li><li><a href="#532021">5/3/2021</a></li><li><a href="#2102021">2/10/2021</a></li><li><a href="#8012019">8/01/2019</a></li><li><a href="#7252020">7/25/2020</a></li></ol></div>
+<div class="franklin-toc"><ol><li><a href="#11272022">11/27/2022</a></li><li><a href="#1112021">11/1/2021</a></li><li><a href="#6152021">6/15/2021</a></li><li><a href="#532021">5/3/2021</a></li><li><a href="#2102021">2/10/2021</a></li><li><a href="#8012019">8/01/2019</a></li><li><a href="#7252020">7/25/2020</a></li></ol></div>
+<h2 id="11272022"><a href="#11272022" class="header-anchor">11/27/2022</a></h2>
+<p>The newest model on our platform, <a href="https://github.com/rffscghg/MimiGIVE.jl/tree/main/src">MimiGIVE</a> is a fully open source model featured in the recent Nature publication <a href="https://www.nature.com/articles/s41586-022-05224-9">Comprehensive evidence implies a higher social cost of CO2</a> and featured in recent <a href="https://www.epa.gov/environmental-economics/scghg">EPA work</a>.</p>
+<h2 id="1112021"><a href="#1112021" class="header-anchor">11/1/2021</a></h2>
+<p>Check out the new <a href="https://github.com/anthofflab/MimiSSPs.jl">MimiSSPs.jl</a> component, pulling in various SSP and RCP data sources into a component to streamline running Mimi models as forced by the SSPs and RCPs.</p>
 <h2 id="6152021"><a href="#6152021" class="header-anchor">6/15/2021</a></h2>
 <p>We released Mimi 1.3.0, featuring new and improved handling of setting and updating parameters, mostly driven by helpful requests and comments from users. These changes  will not be breaking, so your existing models should work in most cases, and if they don&#39;t please get in touch.  That said, we encourage taking a look at modifying your models accordingly if you have a chance.</p>
 <ul>
@@ -76,7 +80,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: August 19, 2022 
+    <br>Last modified: November 28, 2022 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
