Use serve() to update html

--- a/__site/index.html
+++ b/__site/index.html
@@ -106,6 +106,8 @@
 </li>
 <li><p><a href="http://awashmodel.org/">AWASH</a></p>
 </li>
+<li><p><a href="https://github.com/BerBastien/GreenDICE">GreenDICE</a></p>
+</li>
 <li><p><a href="https://github.com/openmodels/PAGE-ICE">PAGE-ICE</a></p>
 </li>
 <li><p><a href="https://github.com/Environment-Research/AIR">RICE&#43;AIR</a></p>
@@ -119,7 +121,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: November 15, 2022 
+    <br>Last modified: October 22, 2024 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
