--- a/__site/menu2/index.html
+++ b/__site/menu2/index.html
@@ -46,7 +46,7 @@
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="model_registry"><a href="#model_registry" class="header-anchor">Model Registry</a></h1>
 <p>For convenience, several models are registered in the <a href="https://github.com/mimiframework/MimiRegistry">MimiRegistry</a>, and operate as packages with the Julia package manager <a href="https://docs.julialang.org/en/v1/stdlib/Pkg/index.html">Pkg</a>. For details on connecting to this central Mimi registry, see the Mimi <a href="https://www.mimiframework.org/Mimi.jl/stable/">Documentation</a>.</p>
-<p>Update &#40;5/3/2020&#41;: Please note that going forward we are moving away from this model and encouraging registration in the <a href="https://pkgdocs.julialang.org/v1/registries/">General Registry</a> to keep things simple and seamless for users instead of requiring extra maintenance and communication by our team. This will not be a breaking change, so current models registered with the Mimi registry will work as expected.</p>
+<p><strong>Update &#40;5/3/2020&#41;</strong>: Please note that going forward we are moving away from this model and encouraging registration in the <a href="https://pkgdocs.julialang.org/v1/registries/">General Registry</a> to keep things simple and seamless for users instead of requiring extra maintenance and communication by our team. This will not be a breaking change, so current models registered with the Mimi registry will work as expected.</p>
 <p>The models currently included in the registry include those linked below.</p>
 <ul>
 <li><p><a href="https://github.com/fund-model/MimiFUND.jl">MimiFUND.jl</a></p>
@@ -76,7 +76,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: August 19, 2022 
+    <br>Last modified: October 22, 2024 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
