--- a/__site/menu5/index.html
+++ b/__site/menu5/index.html
@@ -44,14 +44,22 @@
 
 
 <!-- Content appended here (in class franklin-content) -->
-<div class="franklin-content"><h1 id="publications_using_mimi"><a href="#publications_using_mimi" class="header-anchor">Publications Using Mimi</a></h1>
-<p>“Health Impacts of Climate Change as Contained in Economic Models Estimating the Social Cost of Carbon Dioxide” with Kevin Cromar, Peter Howard and Valeri Vasquez, GeoHealth, forthcoming</p>
-<p>Jarmo et al. &#40;2021&#41;. The social cost of carbon dioxide under climate-economy feedbacks and temperature variability. ERL. https://iopscience.iop.org/article/10.1088/1748-9326/ac1d0b</p>
-<p>Errickson, F., Kuruc, K., &amp; McFadden, J. &#40;2021&#41;. Animal-based foods have high social and climate costs. Nature Food, 2&#40;4&#41;, 274-281. doi:10.1038/s43016-021-00265-1</p>
-<p>Scovronick, N., Anthoff, D., Dennig, F., Errickson, F., Ferranna, M., Peng, W., ... &amp; Budolfson, M. &#40;2021&#41;. The importance of health co-benefits under different climate policy cooperation frameworks. Environmental Research Letters, 16&#40;5&#41;, 055027.</p>
+<div class="franklin-content"><h1 id="selection_of_publications_using_mimi"><a href="#selection_of_publications_using_mimi" class="header-anchor">Selection of Publications Using Mimi</a></h1>
+<p>Tan, T., Rennels, L., &amp; Parthum, B. &#40;2024&#41;. The social costs of hydrofluorocarbons and the benefits from their expedited phase-down. Nature climate change, 14&#40;1&#41;, 55-60.</p>
+<p>Rennels, L., &amp; Chasins, S. E. &#40;2023&#41;. How domain experts use an embedded DSL. Proceedings of the ACM on Programming Languages, 7&#40;OOPSLA2&#41;, 1499-1530.</p>
+<p>Benveniste, H., Oppenheimer, M., &amp; Fleurbaey, M. &#40;2022&#41;. Climate change increases resource-constrained international immobility. Nature Climate Change, 12&#40;7&#41;, 634-641.</p>
+<p>Rennert, K., Errickson, F., Prest, B. C., Rennels, L., Newell, R. G., Pizer, W., ... &amp; Anthoff, D. &#40;2022&#41;. Comprehensive evidence implies a higher social cost of CO2. Nature, 610&#40;7933&#41;, 687-692.</p>
+<p>Wong, T. E., Ledna, C., Rennels, L., Sheets, H., Errickson, F. C., Diaz, D., &amp; Anthoff, D. &#40;2022&#41;. Sea Level and Socioeconomic Uncertainty Drives High‐End Coastal Adaptation Costs. Earth&#39;s Future, 10&#40;12&#41;, e2022EF003061.</p>
+<p>Wong, T. E., Rennels, L., Errickson, F., Srikrishnan, V., Bakker, A., Keller, K., &amp; Anthoff, D. &#40;2022&#41;. MimiBRICK. jl: A Julia package for the BRICK model for sea-level change in the Mimi integrated modeling framework. Journal of Open Source Software, 7&#40;76&#41;, 4556.</p>
+<p>Cromar, K., Howard, P., Vásquez, V. N., &amp; Anthoff, D. &#40;2021&#41;. Health impacts of climate change as contained in economic models estimating the social cost of carbon dioxide. GeoHealth, 5&#40;8&#41;, e2021GH000405.</p>
+<p>Bastien-Olvera, B. A., &amp; Moore, F. C. &#40;2021&#41;. Use and non-use value of nature and the social cost of carbon. Nature Sustainability, 4&#40;2&#41;, 101-108.</p>
 <p>Errickson, F. C., Keller, K., Collins, W. D., Srikrishnan, V., &amp; Anthoff, D. &#40;2021&#41;. Equity is more important for the social cost of methane than climate uncertainty. Nature, 592&#40;7855&#41;, 564-570. doi:10.1038/s41586-021-03386-6</p>
+<p>Errickson, F., Kuruc, K., &amp; McFadden, J. &#40;2021&#41;. Animal-based foods have high social and climate costs. Nature Food, 2&#40;4&#41;, 274-281. doi:10.1038/s43016-021-00265-1</p>
+<p>Jarmo et al. &#40;2021&#41;. The social cost of carbon dioxide under climate-economy feedbacks and temperature variability. ERL. https://iopscience.iop.org/article/10.1088/1748-9326/ac1d0b</p>
+<p>Scovronick, N., Anthoff, D., Dennig, F., Errickson, F., Ferranna, M., Peng, W., ... &amp; Budolfson, M. &#40;2021&#41;. The importance of health co-benefits under different climate policy cooperation frameworks. Environmental Research Letters, 16&#40;5&#41;, 055027.</p>
 <p>Rising, J., &amp; Devineni, N. &#40;2020&#41;. Crop switching reduces agricultural losses from climate change in the United States by half under RCP 8.5. Nature communications, 11&#40;1&#41;, 1-7.</p>
 <p>Rising, J. &#40;2020&#41;. Decision-making and integrated assessment models of the water-energy-food nexus. Water Security, 9, 100056.</p>
+<p>Benveniste, H., Oppenheimer, M., &amp; Fleurbaey, M. &#40;2020&#41;. Effect of border policy on exposure and vulnerability to climate change. Proceedings of the National Academy of Sciences, 117&#40;43&#41;, 26692-26702.</p>
 <p>Anthoff, D., &amp; Emmerling, J. &#40;2019&#41;. Inequality and the social cost of carbon. Journal of the Association of Environmental and Resource Economists, 6&#40;2&#41;, 243-273. doi:10.1086/701900</p>
 <p>Scovronick, N., Budolfson, M., Dennig, F., Errickson, F., Fleurbaey, M., Peng, W., ... &amp; Wagner, F. &#40;2019&#41;. The impact of human health co-benefits on evaluations of global climate policy. Nature communications, 10&#40;1&#41;, 1-12. doi:10.1038/s41467-019-09499-x</p>
 <p>Moore, F. C., Rising, J., Lollo, N., Springer, C., Vasquez, V., Dolginow, A., ... &amp; Anthoff, D. &#40;2018&#41;. Mimi-PAGE, an open-source implementation of the PAGE09 integrated assessment model. Scientific data, 5&#40;1&#41;, 1-8. doi:10.1038/sdata.2018.187</p>
@@ -60,7 +68,7 @@
   <div class="copyright">
     <hr color:grey>
     <br>David Anthoff, Richard Plevin, Cora Kingdon, and Lisa Rennels 
-    <br>Last modified: August 19, 2022 
+    <br>Last modified: October 22, 2024 
     <br>Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a>.
   </div>
 </div>
